2002-09-30  Roland McGrath  <roland@redhat.com>

	* elf/tls-macros.h (TLS_LD, TLS_GD): Use call insn, not callq.

	* sysdeps/unix/x86_64/sysdep.S [USE_TLS && HAVE___THREAD] [! PIC]:
	Use direct-%fs form of TLS access for errno.

	* sysdeps/unix/sysv/linux/i386/i686/sysdep.h: File removed, since
	the i386 version has all the same asm now.

	* sysdeps/i386/elf/configure.in: Add @GOTNTPOFF and @NTPOFF uses to
	the TLS support check.
	* sysdeps/i386/elf/configure: Regenerated.

	* sysdeps/unix/sysv/linux/i386/sysdep.h [USE_TLS && HAVE___THREAD]
	(SYSCALL_ERROR_HANDLER): Use direct-%gs form of TLS access for errno.

	* sysdeps/unix/i386/sysdep.S (syscall_error)
	[USE_TLS && HAVE___THREAD]: Use TLS access for errno.

	* sysdeps/unix/sysv/linux/x86_64/sysdep.h
	[USE_TLS && HAVE___THREAD] (SYSCALL_ERROR_HANDLER): Use TLS access.

	* rt/tst-aio7.c (do_test): Don't read from stdin, which could be the
	terminal when the test is running in a background job.  Instead, make
	a pipe and read from its read half while never writing anything to it.

2002-09-30  Andreas Jaeger  <aj@suse.de>

	* stdlib/tst-bsearch.c (main): Fix format strings.
	* stdio-common/tst-rndseek.c (do_test): Likewise.
	* libio/tst_swprintf.c (main): Likewise.
	* catgets/tst-catgets.c (main): Likewise.
	* libio/tst-fgetws.c (main): Likewise.
	* posix/tst-mmap.c (main): Likewise.
	* posix/bug-regex12.c (main): Likewise.
	* posix/bug-regex11.c (main): Likewise.
	* io/tst-getcwd.c (do_test): Likewise.

	* iconvdata/tst-e2big.c (test): Use %td in printf for ptrdiff_t.

	* sysdeps/unix/sysv/linux/x86_64/sysdep.h (SYSCALL_ERROR_HANDLER):
	Store 4 bytes into errno, not 8 bytes.

2002-09-29  Ulrich Drepper  <drepper@redhat.com>

	* posix/regexec.c (sift_states_bkref): Remove ret variable.  Use
	err instead.

2002-09-29  Roland McGrath  <roland@redhat.com>

	* test-skeleton.c (timeout_handler): Use WUNTRACED flag in waitpid.
	Examine the child's status and print something different if it wasn't